# atst-tools

./: .gitignore  .gitmodules  AGENTS.md  COPYING  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: abacuslite-ase-interface.yml  publish-pypi.yml  tests.yml
.superpowers/sdd/: task-4-report.md  task-6-report.md  task-final-fix-report.md
.trae/documents/: ATST_Tools_Documentation_CN.md  NEB_para_abacuslite.md  Zn-NEB-segments.md
.trae/refs/: neb_utils.py
.trae/rules/: project_rules.md
docs/: ATST_Tools_Documentation_CN.md  CONFIG_REFERENCE.md  DOCUMENTATION_STANDARDS.md  DOCUMENTATION_STATUS_REPORT.md  FEATURE_STATUS_MATRIX.md  ITERATION_1_PLAN.md  REFACTORING_GUIDE.md  REFACTORING_PLAN_DETAILED.md  index.md
docs/developer/: DOCS_ARCHITECTURE.md  DOCUMENTATION_STANDARDS.md  EXAMPLE_VALIDATION_OPERATIONS.md  HANDOVER.md  PYPI_RELEASE_AUTOMATION.md  REFACTORING_GUIDE.md  YAML_INPUT_GOVERNANCE.md
docs/releases/: RC_RELEASE_NOTES_2.0.0-rc.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.0.1.md  RELEASE_NOTES_2.0.2.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_2.1.1.md  RELEASE_NOTES_2.1.2.md  RELEASE_NOTES_2.1.3.md  RELEASE_NOTES_2.1.4.md  RELEASE_NOTES_2.2.0.md
docs/reports/: ABACUS_STRU_IO_ASE_FORMAT_COMPATIBILITY_2026-06-04.md  ACCEPTANCE_2.0.0rc_CN.md  ATST_TOOLS_NEB_ASE_COMPARISON_REVIEW_2026-05-18.md  CCQN_ABACUSLITE_VALIDATION_2026-05-26.md  CY_PT_AUTONEB_FAILURE_ROOT_CAUSE_REVIEW_2026-05-18.html  Calculator_Review.md  DMF_DIRECT_MAXFLUX_RESEARCH_2026-06-17.html  DMF_ENVIRONMENT_SMOKE_2026-06-18.md  DMF_P3_RUNTIME_VALIDATION_2026-06-18.md  DMF_P3_VALIDATION_STAGING_2026-06-18.md  DMF_P4_D2S_ABACUS_COMPARISON_2026-06-18.md  DMF_P4_D2S_IRC_ENDPOINT_VALIDATION_2026-06-18.md  DMF_P4_D2S_RUNTIME_SMOKE_2026-06-18.md  DMF_P4_D2S_VIBRATION_VALIDATION_2026-06-18.md  DMF_RISK_REVIEW_2026-06-19.md  DOCUMENTATION_STATUS_REPORT.md  DPA3_DP_EXAMPLES_VALIDATION_2026-05-28.md  DP_VALIDATION_2.0.0.md  EXAMPLES_INITIAL_GUESS_AUDIT_2026-05-26.md  EXAMPLES_MAIN_BRANCH_COMPARISON_LTS3101_2026-05-19.md  EXAMPLES_MAIN_BRANCH_COMPARISON_LTS3101_2026-05-19.metrics.json  EXAMPLES_REGRESSION_2026-05-11.md  EXAMPLES_REPRODUCTION_RECHECK_AND_ABACUSLITE_AUDIT_2026-05-24.md  FAST_IDPP_ALGORITHM_COMPARISON_AND_FIX_2026-05-25.md  (+21 more)
examples/: README.md  dp_model_manifest.json  dp_reference_results.json  reference_results.json
neb/: neb_make.py  neb_post.py
scripts/: check_abacuslite_snapshot.py  check_docs_governance.py  download_dp_model.py  generate_dp_reference_results.py  validate_dmf_abacus_comparison.py  validate_dmf_candidates.py  validate_dmf_irc_endpoints.py  verify_wheel_api.py
tests/: conftest.py  helpers.py
tools/: validate_abacuslite.sh  validation_report.md
(+330 files in other folders)
