[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atst-tools"
version = "2.1.3"
description = "Advanced ASE Transition State Tools for ABACUS and Deep-Potential"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.28.0",
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "pydantic>=2,<3",
    "ruamel.yaml>=0.18,<0.20",
    "seekpath>=2.2,<3",
    "sella>=2.5,<3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.9,<4"]
dp = ["deepmd-kit>=3.1.3"]
parallel = ["mpi4py>=4.1.2"]
test = ["pytest>=8.4,<10"]
release = ["build>=1.5,<2", "twine>=6.2,<7"]
dev = [
    "pytest>=8.4,<10",
    "build>=1.5,<2",
    "twine>=6.2,<7",
]

[project.scripts]
atst = "atst_tools.scripts.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "unit: fast local unit tests that do not require external executables",
    "integration: local integration-style fixture tests that do not submit Slurm jobs",
    "slurm: opt-in tests that may require ABACUS/DeePMD and a Slurm allocation",
]
